--- a/APPVIEW/Views/Cart/ViewCart.cshtml
+++ b/APPVIEW/Views/Cart/ViewCart.cshtml
@@ -53,60 +53,45 @@
                         </tr>
                     </thead>
                     <tbody>
-                    <form asp-action="Updatecart" asp-controller="Cart" method="post">                                                          
+                          <form asp-action="Updatecart" asp-controller="Cart" method="post">
+                              
+                             
                         @{
-                                var ls = new List<Guid>();
-                                var lc = new List<Guid>();
+
+                                var ls = new List<string>();
+                                var lc = new List<string>();
+
                             @for (int i = 0; i < Model.Count; i++)
                             {
-                                     ls = new List<Guid>();
-                                     lc = new List<Guid>();
-                                    @foreach (var pro in ViewBag.prod)
-                                    {
-                                        if (pro.Id_Product == @Model[i].Id_Product)
-                                        {
-                                           if (!ls.Any(c=> c == pro.Id_Size))
-                                            {
-                                                ls.Add(pro.Id_Size);
-                                            }
-                                            if (!lc.Any(c => c == pro.Id_Color))
-                                            {
-                                                lc.Add(pro.Id_Color);
-                                            }
-                                          
-                                           
-                                        }                                    
-                                    }
-                                  
+                                    lc.Add(Model[i].Id_Color.ToString());
+                                    ls.Add(Model[i].Id_Size.ToString());
                                     <input hidden asp-for="@Model[i].Id" value="@Model[i].Id" id="pro" />
                                     <input hidden asp-for="@Model[i].Id_Product" value="@Model[i].Id_Product" />
                                     <input hidden asp-for="@Model[i].Name" value="@Model[i].Name" />
                                 var tt = @Model[i].Price * @Model[i].Quantity;
                                     <tr>                               
 
-                                        @foreach (var img in ViewBag.Img)
+                                     @foreach (var img in ViewBag.Img)
+                                    {
+
+                                        if (img.IdProductdetail == @Model[i].Id)
                                         {
-
-                                            if (img.IdProductdetail == @Model[i].Id)
-                                            {
-                                                    <td>
-                                                        <div class="media">
-                                                            <div class="d-flex">
-                                                                <img src="~/images/@img.Name" style="width: 150px;" alt="">
-                                                            </div>
+                                                <td>
+                                                    <div class="media">
+                                                        <div class="d-flex">
+                                                            <img src="~/images/@img.Name" style="width: 150px;" alt="">
                                                         </div>
-                                                    </td>
-                                                    break;
+                                                    </div>
+                                                </td>
+                                                break;
                                             }
-                                        }
+                                    }
                                         <td >@Model[i].Name</td>
-
-                                        <td>@Model[i].Price.ToString("C0", new CultureInfo("vi-VN"))</td>
-
+                                    <td>@Model[i].Price.ToString("C0", new CultureInfo("vi-VN"))</td>
                                         <td>
                                          
                                             <div class="product_count">
-                                            <input type="number" id=@Model[i].Id maxlength="12" title="Quantity:" class="input-text qty" value="@Model[i].Quantity" asp-for="@Model[i].Quantity" min="0" >
+                                            <input type="number" id=@Model[i].Id maxlength="12" title="Quantity:" class="input-text qty" value="@Model[i].Quantity" asp-for="@Model[i].Quantity" min="0" onchange="updatecart(@Model[i].Id)">
                                                 <button onclick="var result = document.getElementById('@Model[i].Id'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
                                                     class="increase items-count" type="button">
                                                     <i class="fa fa-plus"></i>
@@ -119,13 +104,12 @@
                                         </td>
 
                                         <td class="align-middle">
-                                            <select asp-for="@Model[i].Id_Size" >
+                                            <select asp-for="@Model[i].Id_Size" id="size">
                                             @foreach (var Size in ViewBag.Size)
                                             {
-                                                
                                                     @foreach (var c in ls)
                                                     {
-                                                        if (c == @Size.Id)
+                                                        if (c == @Size.Id.ToString())
                                                         {
                                                             <option value="@Size.Id">@Size.Name</option>
                                                         }
@@ -133,28 +117,36 @@
                                                 }
                                             </select>
                                         </td>
-
                                         <td class="align-middle">
-                                            <select asp-for="@Model[i].Id_Color">                                                
+                                            <select asp-for="@Model[i].Id_Color">
+                                               
+                                                
+                                                   
                                                     @foreach (var Color in ViewBag.Color)
-                                                    {                                           
-                                                        @foreach (var c in lc)
+                                                    {
+                                                       
+                                                    @foreach (var c in lc)
+                                                    {
+                                                        if (c == @Color.Id.ToString())
                                                         {
-                                                            if (c == @Color.Id)
-                                                            {
-                                                            <option value="@Color.Id">@Color.Name</option>
-                                                            }
+                                                        <option value="@Color.Id">@Color.Name</option>
+                                                        }
 
-                                                 
-                                                        }                                                        
-                                                    }                                                                                         
+                                                   
+                                                    }
+                                                       
+
+
+                                                       
+                                                    }
+                                                
+
+                                           
                                             </select>
                                         </td>
-
                                         <td class="align-middle">
                                             @tt.ToString("C0", new CultureInfo("vi-VN"))
                                         </td>
-
                                         <td>
                                             <a class="btn btn-light" href="@Url.ActionLink("DeleteCartItem","Cart",new{id=Model[i].Id})"><i class="fa fa-trash"></i></a>
                                         </td>
@@ -167,9 +159,10 @@
                         <tr class="bottom_button">
                             <td>
                                 <button class="button" type="submit">Update Cart</button>
-                            </td>                        
+                            </td>
+                        
                         </tr>
-                    </form>
+                        </form>
                         <tr>
                             <td>
                             </td>  <td>
